@@ -1,7 +1,8 @@
-# Do not edit this file - Generated by Perlito5 9.014
 
 use v5.10;
 use feature 'say';
+
+# Do not edit this file - Generated by Perlito5 9.014
 
 {
     package main;
@@ -1126,7 +1127,14 @@ use feature 'say';
                                         my $modifier = statement_modifier($str, $res->{'to'}, Perlito5::Match::flat($res));
                                         my $p = $modifier ? $modifier->{'to'} : $res->{'to'};
                                         my $terminator = substr($str, $p, 1);
-                                        $terminator ne ';' && $terminator ne '}' && $terminator ne '' && die('Number or Bareword found where operator expected');
+                                        if ($terminator ne ';' && $terminator ne '}' && $terminator ne '') {
+                                            my $type = 'Number or Bareword';
+                                            $terminator ge 0 && $terminator le 9 && ($type = 'Number');
+                                            ($terminator eq '"' || $terminator eq chr(39)) && ($type = 'String');
+                                            $terminator eq '$' && ($type = 'Scalar');
+                                            $terminator eq '@' && ($type = 'Array');
+                                            die($type . ' found where operator expected')
+                                        }
                                         if (!$modifier) {
                                             return $res
                                         }
