@@ -1,6 +1,8 @@
 
 - Docs:
 -- cookbook entry "Obtaining a Perl compiler script that runs in the browser"
+- Parser:
+-- error messages for: Scalar/Array/Number/String found where operator expected
 - Javascript:
 -- console.log() is the default "print"
 - Command line "perlito5"
